--- a/webApplicationPokemon/src/app/public/home/home.component.html
+++ b/webApplicationPokemon/src/app/public/home/home.component.html
@@ -6,10 +6,9 @@
 <div class="container-fluid">
   <div class="row align-items-center justify-content-md-center h-100">
     <div class="col-md-3 boxLogin p-5 rounded shadow">
-      <img src="assets/img/pokemonLogo.png" width="100%" alt="" />
-      <input type="text" placeholder="Usuario" />
-      <input type="Password" placeholder="Contraseña" />
-      
+      <button routerLink="/login">
+        Iniciar Sesión
+      </button>
     </div>
   </div>
 </div>
