se implementa api de pokemons

--- a/webApplicationPokemon/src/app/core/profile/profile.component.html
+++ b/webApplicationPokemon/src/app/core/profile/profile.component.html
@@ -1,1 +1,19 @@
-<p>profile works!</p>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-md-2 bg-pokemon lateral-bar py-5 px-3">
+            <div class="profile">
+                <div class="img-profile">
+                    <img src="assets/img/profileImg.jpg" width="100%" alt="">
+                </div>
+            </div>
+        </div>
+        <div class="col-md-10">
+            <div class="pokemons-cards-container py-5 px-3">
+                <h2 class="fw-bold">Conoce tus pokemons</h2>
+                <div class="pokemonsCards">
+                    <app-pokemon-description></app-pokemon-description>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
