--- a/webApplicationPokemon/src/app/shared/pokemonCards/pokemon-description.component.html
+++ b/webApplicationPokemon/src/app/shared/pokemonCards/pokemon-description.component.html
@@ -1,11 +1,11 @@
 <div class="row">
 
-    <div class="card col-2 m-2" style="width: 18rem;" *ngFor="let pokemon of data">
+    <div class="card col-2 m-2"  *ngFor="let pokemon of data">
         <img class="card-img-top" src="{{pokemon.image}}" alt="Card image cap">
         <div class="card-body">
             <h5 class="card-title">{{pokemon.name}}</h5>
             <p class="card-text">{{pokemon.description}}</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <a href="#" class="btn btn-primary">Remover</a>
         </div>
     </div>
 </div>
