--- a/webApplicationPokemon/src/app/core/profile/profile.component.html
+++ b/webApplicationPokemon/src/app/core/profile/profile.component.html
@@ -5,6 +5,15 @@
                 <div class="img-profile">
                     <img src="assets/img/profileImg.jpg" width="100%" alt="">
                 </div>
+                <button class="btn btn-primary add-photo"> <mat-icon> add_a_photo</mat-icon></button>
+                <div class="profile-description  mt-5">
+                    <h6 class="text-white">Nombre:</h6>
+                    <h4 class="profile-title">Sebastian Gomez</h4>
+                    <h6 class="text-white">Edad:</h6>
+                    <h4 class="profile-title">26 Años</h4>
+                    <h6 class="text-white">Gimnasio pokemon:</h6>
+                    <h4 class="profile-title">Bogota</h4>
+                </div>
             </div>
         </div>
         <div class="col-md-10">
@@ -17,3 +26,5 @@
         </div>
     </div>
 </div>
+
+<app-add-pokemons></app-add-pokemons>
