--- a/webApplicationPokemon/src/styles.scss
+++ b/webApplicationPokemon/src/styles.scss
@@ -41,3 +41,15 @@ $Pokemon-theme: mat.define-light-theme((
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+h4{
+  font-size: 22px !important;
+  font-weight: 900 !important;
+}
+h6{
+  font-size: 14px !important;
+  font-weight: 700 !important;
+}
+h5{
+  font-size: 14px !important;
+  font-weight: 900 !important;
+}
