--- a/webApplicationPokemon/src/app/shared/add-pokemons/add-pokemons.component.html
+++ b/webApplicationPokemon/src/app/shared/add-pokemons/add-pokemons.component.html
@@ -12,7 +12,7 @@
                     <img class="card-img-top" src="{{pokemon.image}}" alt="Card image cap">
                     <div class="card-body">
                         <h5 class="card-title">{{pokemon.name}}</h5>
-                        <p class="card-text">{{pokemon.description}}</p>
+                        <p class="card-text">{{pokemon.abilities}}</p>
                         <a href="#" class="btn btn-primary">Agregar</a>
                     </div>
                 </div>
