--- a/webApplicationPokemon/src/app/shared/add-pokemons/add-pokemons.component.scss
+++ b/webApplicationPokemon/src/app/shared/add-pokemons/add-pokemons.component.scss
@@ -1,6 +1,7 @@
 .bg-pokemon{
     background-color: rgba(255, 203, 5, 1);
     font-size: 20px;
+    border:solid 1px black;
 }
 .modal-body{
     max-height:70vh;
