--- a/webApplicationPokemon/src/app/core/profile/profile.component.html
+++ b/webApplicationPokemon/src/app/core/profile/profile.component.html
@@ -1,30 +1,37 @@
 <div class="container-fluid">
-    <div class="row">
-        <div class="col-md-2 bg-pokemon lateral-bar py-5 px-3">
-            <div class="profile">
-                <div class="img-profile">
-                    <img src="assets/img/profileImg.jpg" width="70%" alt="">
-                </div>
-                <button class="btn btn-primary add-photo"> <mat-icon> add_a_photo</mat-icon></button>
-                <div class="profile-description  mt-5">
-                    <h6 class="text-white">Nombre:</h6>
-                    <h4 class="profile-title">Sebastian Gomez</h4>
-                    <h6 class="text-white">Edad:</h6>
-                    <h4 class="profile-title">26 Años</h4>
-                    <h6 class="text-white">Gimnasio pokemon:</h6>
-                    <h4 class="profile-title">Bogota</h4>
-                </div>
-            </div>
+  <div class="row">
+    <div class="col-md-2 bg-pokemon lateral-bar py-5 px-3">
+      <div class="profile">
+        <div class="img-profile">
+          <img src="assets/img/profileImg.jpg" width="70%" alt="" />
         </div>
-        <div class="col-md-10">
-            <div class="pokemons-cards-container py-5 px-3">
-                <h2 class="fw-bold">Conoce tus pokemons</h2>
-                <div class="pokemonsCards">
-                    <app-pokemon-description></app-pokemon-description>
-                </div>
-            </div>
+        <button class="btn btn-primary add-photo">
+          <mat-icon> add_a_photo</mat-icon>
+        </button>
+        <div class="profile-description mt-5">
+          <h6 class="text-white">Nombre:</h6>
+          <h4 class="profile-title">Sebastian Gomez</h4>
+          <h6 class="text-white">Edad:</h6>
+          <h4 class="profile-title">26 Años</h4>
+          <h6 class="text-white">Gimnasio pokemon:</h6>
+          <h4 class="profile-title">Bogota</h4>
         </div>
+      </div>
     </div>
+    <div class="col-md-10">
+      <div class="pokemons-cards-container py-5 px-3">
+        <h2 class="fw-bold">Conoce tus pokemons</h2>
+        <div class="pokemonsCards">
+          <app-pokemon-description></app-pokemon-description>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
 
-<app-add-pokemons></app-add-pokemons>
+<div class="logOut">
+  <button (click)="onClearToken()" class="btn bg-pokemon w-100">
+    <mat-icon>exit_to_app</mat-icon>
+  </button>
+  <app-add-pokemons></app-add-pokemons>
+</div>
