--- a/webServicePokemon/PokemonWebService/Views/NewUsers/Index.cshtml
+++ b/webServicePokemon/PokemonWebService/Views/NewUsers/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<PokemonWebService.Models.NewUsers>
+﻿@model IEnumerable<PokemonWebService.Models.Users>
 
 @{
     ViewData["Title"] = "Index";
